<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_ultrasonic_demo_description</name>
  <version>0.0.1</version>
  <description>
    3D models of the TurtleBot3 for simulation and visualization
  </description>
  <license>Apache 2.0</license>
  <author email="alejandro@openrobotics.org">Alejandro</author>
  <maintainer email="alejandro@openrobotics.org">Alejandro</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
</package>
